<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/name" />
	<EditText android:id="@+id/name" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="1"		
		/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/address" />
	<EditText 
		android:id="@+id/address" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/phone" />
	<EditText android:id="@+id/phone" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/note" />
	<EditText android:id="@+id/note" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
	<RatingBar android:id="@+id/ratingbar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:numStars="5"
		android:stepSize="1.0"
		android:layout_column="1"
		android:isIndicator="false"
		android:paddingTop="20dp"
		android:layout_gravity="center"
	/>
	<Button 
	android:id="@+id/confirm" 
	  	android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		/>

</LinearLayout>